--- a/Pictures.html
+++ b/Pictures.html
@@ -18,6 +18,6 @@
         <br>
         <h3 class="btn btn-info">There are six identified objects in this picture</h3>
 
-        <script src="desk.js"></script>
+        <script src="Picture.js"></script>
     </body>
 </html>
