--- a/Scarf.html
+++ b/Scarf.html
@@ -18,6 +18,6 @@
         <br>
         <h3 class="btn btn-info">There are nine identified objects in this picture</h3>
 
-        <script src="desk.js"></script>
+        <script src="Scarf.js"></script>
     </body>
 </html>
