--- a/Table.html
+++ b/Table.html
@@ -18,6 +18,6 @@
         <br>
         <h3 class="btn btn-info">There are eight identified objects in this picture</h3>
 
-        <script src="desk.js"></script>
+        <script src="Table.js"></script>
     </body>
 </html>
