--- a/shelf.html
+++ b/shelf.html
@@ -18,6 +18,6 @@
         <br>
         <h3 class="btn btn-info">There are ten identified objects in this picture</h3>
 
-        <script src="desk.js"></script>
+        <script src="shelf.js"></script>
     </body>
 </html>
