--- a/Scarf.html
+++ b/Scarf.html
@@ -16,7 +16,7 @@
         <a id="go_back" href="index.html">Back</a>
         <h2 class="btn btn-warning" id="status">Status: Not Detecting Anything</h2>
         <br>
-        <h3 class="btn btn-info">There are nine identified objects in this picture</h3>
+        <h3 id="objects_there" class="btn btn-info">There are nine identified objects in this picture</h3>
 
         <script src="Scarf.js"></script>
     </body>
