--- a/Pictures.html
+++ b/Pictures.html
@@ -16,8 +16,7 @@
         <a id="go_back" href="index.html">Back</a>
         <h2 class="btn btn-warning" id="status">Status: Not Detecting Anything</h2>
         <br>
-        <h3 class="btn btn-info">There are six identified objects in this picture</h3>
-
+        <h3 id="objects_there" class="btn btn-info">There are six identified objects in this picture</h3>
         <script src="Picture.js"></script>
     </body>
 </html>
