--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <h2 class="btn btn-default">Please Click one of These options to visit it and you can press the button on the right of screen.</h2>
         <br>
         <br>
-        <a class="btn btn-success " href="desk.html">Desk</a>
+        <a class="btn btn-success " href="phone.html">Phone</a>
         <br>
         <br>
-        <a class="btn btn-success " href="Pictures.html">Pictures</a>
+        <a class="btn btn-success " href="computer.html">Computer</a>
         <br>
         <br>
-        <a class="btn btn-success " href="Scarf.html">Scarf and Hat Rack</a>
+        <a class="btn btn-success " href="Cup.html">Cup</a>
         <br>
         <br>
-        <a class="btn btn-success " href="shelf.html">Shelf</a>
+        <a class="btn btn-success " href="Vase.html">Vase</a>
         <br>
         <br>
-        <a class="btn btn-success " href="Table.html">Table</a>
+        <a class="btn btn-success " href="Chair.html">Chair</a>
         <br>
         <br>
     </body>
